cmake_minimum_required(VERSION 3.16)
project(cmake_import VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt6 REQUIRED COMPONENTS Widgets Core Gui)
qt_standard_project_setup()
set(BOOST_INCLUDE_DIRS E:/boost_1_81_0)
add_subdirectory(src)
